--- a/src/static/scss/_main.scss
+++ b/src/static/scss/_main.scss
@@ -1,36 +1,57 @@
-<<<<<<< HEAD
-@import "src/static/scss/abstracts/variables", "src/static/scss/abstracts/functions", "src/static/scss/abstracts/mixins";
+@import "src/static/scss/abstracts/variables",
+"src/static/scss/abstracts/functions",
+"src/static/scss/abstracts/mixins";
 
 @import "src/static/scss/vendors/jquery-ui";
 
-@import "src/static/scss/base/reset", "src/static/scss/base/typography";
+@import "src/static/scss/base/reset",
+"src/static/scss/base/typography";
 
-@import "src/static/scss/layout/navigation", "src/static/scss/layout/grid", "src/static/scss/layout/header", "src/static/scss/layout/footer",
-"src/static/scss/layout/sidebar", "src/static/scss/layout/form";
+@import "src/static/scss/layout/navigation",
+"src/static/scss/layout/grid",
+"src/static/scss/layout/header",
+"src/static/scss/layout/footer",
+"src/static/scss/layout/sidebar",
+"src/static/scss/layout/form";
 
-@import "src/static/scss/components/buttons", "src/static/scss/components/carousels", "src/static/scss/components/covers",
-"src/static/scss/components/dropdown", "src/static/scss/components/inputs";
+@import "src/static/scss/components/buttons",
+"src/static/scss/components/carousels",
+"src/static/scss/components/covers",
+"src/static/scss/components/dropdown",
+"src/static/scss/components/inputs";
 
-@import "src/static/scss/pages/home", "src/static/scss/pages/contact";
+@import "src/static/scss/pages/home",
+"src/static/scss/pages/contact";
 
-@import "src/static/scss/themes/theme", "src/static/scss/themes/admin";
-=======
-@import "abstracts/variables", "abstracts/functions", "abstracts/mixins";
+@import "src/static/scss/themes/theme",
+"src/static/scss/themes/admin";
+@import "abstracts/variables",
+"abstracts/functions",
+"abstracts/mixins";
 
 @import "vendors/jquery-ui";
 
-@import "base/reset", "base/typography";
+@import "base/reset",
+"base/typography";
 
-@import "layout/navigation", "layout/grid", "layout/header", "layout/footer",
-"layout/sidebar", "layout/form";
+@import "layout/navigation",
+"layout/grid",
+"layout/header",
+"layout/footer",
+"layout/sidebar",
+"layout/form";
 
-@import "components/buttons", "components/carousels", "components/covers",
-"components/dropdown", "components/inputs";
+@import "components/buttons",
+"components/carousels",
+"components/covers",
+"components/dropdown",
+"components/inputs";
 
-@import "pages/home", "pages/contact";
+@import "pages/home",
+"pages/contact";
 
-@import "themes/theme", "themes/admin";
->>>>>>> 3e4e5795642facfba9d2c01d3438d9d26d7bca85
+@import "themes/theme",
+"themes/admin";
 
 //ul 태그 불릿 제거
 ul {
